--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "webpack --watch",
     "prod": "NODE_ENV=production webpack",
-    "dev": "webpack"
+    "dev": "webpack",
+    "build": "npm run prod"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,6 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
-    "handlebars": "^4.7.7",
     "particles.js": "^2.0.0"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
+    "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
     "node-sass": "^6.0.0",
