--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "prettier": {},
   "dependencies": {
+    "@finki70/shufflejs-react": "^0.2.6",
     "@frontity/core": "^1.14.3",
     "@frontity/head-tags": "^1.1.1",
     "@frontity/html2react": "^1.7.0",
