--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@frontity/tiny-router": "^1.4.4",
     "@frontity/wp-source": "^1.11.6",
     "andreas-theme": "./packages/andreas-theme",
+    "bootstrap": "^5.1.3",
     "frontity": "^1.17.1",
+    "moment": "^2.29.1",
+    "react-bootstrap": "^2.0.0-rc.0",
     "sweetalert2": "^11.1.7",
     "sweetalert2-react-content": "^4.1.1"
   }
